[package]
name = "hyper-perf-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
clap = { version = "4.5.26", features = ["derive"] }
futures-util = "0.3.31"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
